# EEG2BIDS

./: .codespellrc  .eslintrc.json  .gitattributes  .gitignore  LICENSE  Log  MODERNIZATION.md  README.md  TODO.txt  build.ps1  build.sh  eeg2bids-service-windows.spec  eeg2bids-service.spec  import-mne.py  index.html  package-lock.json  package.json  playwright.config.js  pycat-service.spec  pyproject.toml  read_eeglab.py  requirements.txt  set2bids-service-windows.spec  set2bids-service.spec  start-server.ps1  start-server.sh  versions.json  vite.config.js  vitest.config.js
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codespell.yml
docs/: dependencies.md  development.md  testing.md  user-guide.md
eeg2bids/: BIDS.py  EDF.py  Modifier.py  __main__.py  conversion.py  converter.py  iEEG.py  loris_api.py  server.py
electron/main/: backend-service.js  batch-io.js  credentials.js  discovery.js  external-links.js  index.js  ipc.js  settings.js  windows.js
electron/preload/: index.js
electron/tests/: backend.spec.js  batch-io.spec.js  bridge.spec.js  credentials.spec.js  fixtures.js  interactions.spec.js  shutdown.spec.js  smoke.spec.js
public/: eeg2bidsService.js  electron.js  index.html  logo512.icns  logs.js  manifest.json  mffToSetService.js  preload.js  pycat-service.js  pycatService.js  set2bidsService.js  style.css
python/: .gitignore  __init__.py  basehandler.py  bidsconverter.py  edfhandler.py  eeg.py  eeg2bids.py  participants.tsv  pycat.py  set2bids.py  sethandler.py  test_bidsvalidator.py  test_eeg.py  test_set2bids.py
python/libs/: Anonymize.py  BIDS.py  BaseHandler.py  BinaryChunkedUpload.py  EDF.py  EDFHandler.py  Modifier.py  SETHandler.py  TSV.py  TarFile.py  eeg.py  iEEG.py  loris_api.py  tarfile_progress.py  test.py
python/sub-alizee/: sub-alizee_scans.tsv
src/: App.js  App.jsx  ConversionFlags.js  Settings.js  ViewManager.js  config.json  context.js  index.css  index.js  serviceWorker.js
src/css/: App.css  Authentication.css  Authentication.module.css  BatchWorkbench.css  Configuration.css  Converter.css  Help.module.css  Inputs.module.css  Menu.css  Modal.css  SplashScreen.css  Validator.css  Welcome.css  index.css
src/jsx/: BIDS.js  BatchWorkbench.jsx  Configuration.js  Configuration.jsx  Converter.js  DeIdentifier.js  Loris.js  Main.js  SplashScreen.js  SplashScreen.jsx  Validator.js  Validator.jsx  Welcome.js  Welcome.jsx
templates/: eeg_parameters_TEMPLATE.json  ieeg_parameters_TEMPLATE.json
tests/: README.md  conftest.py  test_bids_validator.py  test_channel_types.py  test_conversion.py  test_imports.py  test_inspection.py  test_output_policy.py  test_reader_errors.py  test_regressions.py  test_service.py
tests/fixtures/: README.md  eeg_continuous.edf  eeg_embedded.set  eeg_epoched.set  eeg_events.set  eeg_metadata.json  eeg_split.fdt  eeg_split.set  events_custom.tsv  events_malformed.tsv  events_narrow.tsv  events_wide.tsv  ieeg_continuous.edf  ieeg_metadata.json
tools/: make_dev_data.py
tools/mff_to_set/: run_mff_to_set.sh
wiki/dev_notes/: README.md
wiki/macOS/: README.md
wiki/notes/: README.md
wiki/ubuntu/: README.md
(+88 files in other folders)
