[project]
name = "eeg2bids"
version = "1.0.5"
description = "EEG2BIDS Wizard backend: de-identifies EDF data and converts EEG/iEEG recordings to BIDS."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.14"
dependencies = [
    "mne>=1.7",
    "mne-bids>=0.14",
    # MNE-BIDS export backends. MNE reads EDF/EEGLAB natively, but writing a
    # recording whose reader preloads data (e.g. EEGLAB) requires the matching
    # writer: edfio for EDF output, eeglabio for EEGLAB output, pybv for
    # BrainVision.
    "edfio>=0.4",
    "eeglabio>=0.0.2",
    "pybv>=0.7.5",
    "numpy>=1.26",
    "python-socketio>=5.11",
    "simple-websocket>=1.0",
    "werkzeug>=3.0",
    "requests>=2.32",
    "bids-validator>=1.14",
]

[project.scripts]
eeg2bids = "eeg2bids.server:main"

[dependency-groups]
# Test-only dependencies. Installed by default with `uv sync`; the backend
# suite runs with `uv run pytest`. Kept separate from runtime dependencies so
# the packaged application does not ship the test toolchain.
dev = [
    "pytest>=8",
]

# Optional group for a future standalone-binary build. The packaged
# PyInstaller/Electron workflow is not maintained in this branch (see #135 /
# #136 / #137); this declaration keeps PyInstaller a declared, resolvable build
# dependency so the freeze step is not blocked when packaging is revisited.
packaging = [
    "pyinstaller>=6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# xfail_strict makes an unexpected pass (XPASS) a failure: a regression test
# marked xfail for a known-open defect (e.g. #145) must be un-marked the moment
# the defect is fixed, rather than silently masking new behavior.
xfail_strict = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eeg2bids"]
